k8smanifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestjs-microservices
  labels:
    name: nestjs-microservices
