k8smanifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-microservice
  labels:
    app: nestjs-microservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nestjs-microservice
